fixing bug on mobile nav

--- a/themes/ananke/assets/sass/index.scss
+++ b/themes/ananke/assets/sass/index.scss
@@ -153,6 +153,7 @@ MODIFYING CLASSES
 .-show-nav {
   opacity: 1;
   transition: opacity 0.2s;
+  z-index: 100;
 }
 
 .-hide {
