--- a/themes/ananke/assets/sass/navigation.scss
+++ b/themes/ananke/assets/sass/navigation.scss
@@ -80,6 +80,7 @@
 
   &__list-wrapper {
     opacity: 0;
+    position: absolute;
   }
 
   &__list {
